Added a reference for multimodal embeddings

--- a/notes/main.tex
+++ b/notes/main.tex
@@ -197,7 +197,7 @@ cosine similarity.
 \end{itemize}
 
 % % % % % % % % % % % % % % % % % % %
-\subsection{word2vec:}
+\subsection{word2vec}
 
 static embedding;
 \textbf{s}kip-\textbf{g}ram with \textbf{n}egative \textbf{s}ampling (SGNS);
@@ -328,9 +328,10 @@ learn skip-gram embedding for each constituent $n$-gram, word is represented by 
 \noindent \textbf{Acknowledgments:} Nick Rucks, HHU, 2022
 }
 
-% % % % % % % % % % % % % % % % % % % % %
-\subsection{Contextual Word Embeddings}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
+\section{Contextual Word Embeddings}
 \label{sec:contextual_word_embeddings}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 
 \begin{enumerate}[resume]
     \item \underline{Sequence to sequence tasks, recurrent networks and \textbf{E}mbeddings from \textbf{L}anguage \textbf{Mo}dels (ELMo):}
@@ -408,8 +409,17 @@ learn skip-gram embedding for each constituent $n$-gram, word is represented by 
     \end{itemize}
 \end{enumerate}
 
-% % % % % %
-\subsection{Additional Topics}
+% % % % % % % % % % % % % % % % % % %
+\subsection{Multimodal Embeddings}
+
+Joint text and image space:
+\cite{DBLP:journals/corr/abs-2111-07180}
+
+TODO: Add more references
+
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
+\section{Additional Topics}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 
 \begin{enumerate}[resume]
     \item \underline{Geometry of the word embedding space:}
@@ -447,8 +457,6 @@ learn skip-gram embedding for each constituent $n$-gram, word is represented by 
         \item Debiasing contextualized embeddings \cite{kaneko-bollegala-2021-debiasing}.
     \end{itemize}
     
-    
-
     \item \underline{Sentiment specific word embeddings:}
     \newline
     \emph{Sentiment} is a positive or negative evaluation, and we can enhance our \emph{semantic} specific word embeddings with \emph{sentiment} \cite{yu-etal-2017-refining}.
@@ -480,8 +488,14 @@ learn skip-gram embedding for each constituent $n$-gram, word is represented by 
     \end{itemize}
 \end{enumerate}
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\subsection{Topological Data Analysis and Word Embeddings}
+% % % % % % % % % % % % % % % % % % % % % % %
+\subsection{Word Embeddings in Dialog Systems}
+
+TODO
+
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
+\section{Topological Data Analysis and Word Embeddings}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 
 These last two topics are more advanced, in that they require more background knowledge, and it might be more challenging to prepare an accessible presentation.
 
