--- a/notes/references.bib
+++ b/notes/references.bib
@@ -899,21 +899,32 @@
     abstract = "In comparison to the numerous debiasing methods proposed for the static non-contextualised word embeddings, the discriminative biases in contextualised embeddings have received relatively little attention. We propose a fine-tuning method that can be applied at token- or sentence-levels to debias pre-trained contextualised embeddings. Our proposed method can be applied to any pre-trained contextualised embedding model, without requiring to retrain those models. Using gender bias as an illustrative example, we then conduct a systematic study using several state-of-the-art (SoTA) contextualised representations on multiple benchmark datasets to evaluate the level of biases encoded in different contextualised embeddings before and after debiasing using the proposed method. We find that applying token-level debiasing for all tokens and across all layers of a contextualised embedding model produces the best performance. Interestingly, we observe that there is a trade-off between creating an accurate vs. unbiased contextualised embedding model, and different contextualised embedding models respond differently to this trade-off.",
 }
 
+@article{DBLP:journals/corr/abs-2111-07180,
+	author    = {Yizhen Zhang and
+	Minkyu Choi and
+	Kuan Han and
+	Zhongming Liu},
+	title     = {Explainable Semantic Space by Grounding Language to Vision with Cross-Modal
+	Contrastive Learning},
+	journal   = {CoRR},
+	volume    = {abs/2111.07180},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2111.07180},
+	eprinttype = {arXiv},
+	eprint    = {2111.07180},
+	timestamp = {Tue, 16 Nov 2021 12:12:31 +0100},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-2111-07180.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @misc{https://doi.org/10.48550/arxiv.2205.13568,
   doi = {10.48550/ARXIV.2205.13568},
-  
   url = {https://arxiv.org/abs/2205.13568},
-  
   author = {Zhou, Zhihan and Zhang, Dejiao and Xiao, Wei and Dingwall, Nicholas and Ma, Xiaofei and Arnold, Andrew O. and Xiang, Bing},
-  
   keywords = {Computation and Language (cs.CL), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  
   title = {Learning Dialogue Representations from Consecutive Utterances},
-  
   publisher = {arXiv},
-  
   year = {2022},
-  
   copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International}
 }
 
